Fixed Fellow count, redid flex-alignment on center divs, added a work in progress item, added github to the research

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,16 @@ a:hover {
 .center {
 		width: 300px;
 		z-index: 10;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: nowrap;
+		align-content: flex-start;
+		align-items: center;
+}
+
+.center * {
+	margin:0 0;
+	padding-top: 2em;
 }
 
 .carousel-item.selected {
@@ -159,7 +169,7 @@ a:hover {
 .project-img {
 		max-width: 90%;
 		max-height: 50%;
-		margin: auto auto;
+		/*margin: auto auto;*/
 }
 
 .search-holder {
